--- a/Login/style.css
+++ b/Login/style.css
@@ -10,47 +10,47 @@ body
     background-image: url(bbackground.jpg);
     background-repeat: no-repeat; 
     background-size: 220vh;
-    font-family: cursive;
-    margin-top: 150px; 
+    margin-top: 200px; 
      
 }  
 .login{  
-        width: 240px;  
-        overflow: hidden;  
+        width: 220px;   
         margin: auto;  
         margin: 20 0 0 450px;  
-        padding: 80px;  
+        padding: 70px;  
         background: #ffffff;  
-        border-radius: 15px ;  
+        border-radius: 5px ;  
+        box-shadow: 5px 5px 5px #9999;
           
 }  
 h2{  
     text-align: center;  
-    color: #000000;  
-    padding: 20px;  
+    color: #000000; 
+    font-size: 2.5rem;
+  
 }  
 label{  
     color: #000000;  
     font-size: 17px; 
-    font-family: cursive; 
+    
 }  
 #Uname{  
-    width: 300px;  
+    width: 200px;  
     height: 30px;  
-    border: 2px solid black;  
+    border: 3px solid black;  
     border-radius: 3px;  
     padding-left: 8px;  
 }  
 #Pass{  
-    width: 300px;  
+    width: 200px;  
     height: 30px;  
-    border: 2px solid black;  
+    border: 3px solid black;  
     border-radius: 3px;  
     padding-left: 8px;  
       
 }  
 #log{  
-    width: 300px;  
+    width: 220px;  
     height: 30px;  
     border: none;  
     border-radius: 20px solid black;  
@@ -61,9 +61,12 @@ label{
 }  
 span{  
     color: rgb(0, 0, 0);  
-    font-size: 17px;  
+    font-size: 19px;  
+    
 }  
 a{  
-    float: right;  
-    background-color: grey;  
+    
+    text-decoration: none;  
+
+    
 }  
